force-app/main/default/objects/Batch_Log__c/fields/Batch_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Batch_TimeStamp__c</fullName>
    <label>Batch TimeStamp</label>
    <length>255</length>
    <type>Text</type>
</CustomField>