force-app/main/default/objects/Batch_Log__c/fields/Failed_Entitlement__c.field-meta.xml
<CustomField>
    <fullName>Failed_Entitlement__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Failed Entitlement</label>
    <referenceTo>Entitlement</referenceTo>
    <relationshipLabel>Batch Logs</relationshipLabel>
    <relationshipName>Batch_Logs_del</relationshipName>
    <type>Lookup</type>
</CustomField>