force-app/main/default/objects/Batch_Log__c/fields/Failed_PriceBookEntry__c.field-meta.xml
<CustomField>
    <fullName>Failed_PriceBookEntry__c</fullName>
    <label>Failed PriceBookEntry</label>
    <length>255</length>
    <type>Text</type>
</CustomField>