force-app/main/default/objects/Batch_Log__c/fields/PBE_Link__c.field-meta.xml
<CustomField>
    <fullName>PBE_Link__c</fullName>
    <formula>HYPERLINK(&apos;/&apos;+ Failed_PriceBookEntry__c , Failed_PriceBookEntry__c,&apos;_blank&apos;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>PBE Link</label>
    <type>Text</type>
</CustomField>