force-app/main/default/objects/Batch_Log__c/fields/Related_Product__c.field-meta.xml
<CustomField>
    <fullName>Related_Product__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Related Product</label>
    <referenceTo>Product2</referenceTo>
    <relationshipLabel>Batch Logs</relationshipLabel>
    <relationshipName>Batch_Logs</relationshipName>
    <type>Lookup</type>
</CustomField>