force-app/main/default/objects/Batch_Log__c/fields/Related_Record_ID__c.field-meta.xml
<CustomField>
    <fullName>Related_Record_ID__c</fullName>
    <label>Related Record ID</label>
    <length>255</length>
    <type>Text</type>
</CustomField>