force-app/main/default/objects/Batch_Log__c/fields/Source_Component__c.field-meta.xml
<CustomField>
    <fullName>Source_Component__c</fullName>
    <label>Source Component</label>
    <length>255</length>
    <type>Text</type>
</CustomField>