force-app/main/default/objects/Batch_Log__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Exception_Type__c</columns>
    <columns>Related_Object__c</columns>
    <columns>Source_Component__c</columns>
    <columns>Line_Number__c</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>