force-app/main/default/objects/Batch_Log__c/listViews/Lead_Batch_Error.listView-meta.xml
<ListView>
    <fullName>Lead_Batch_Error</fullName>
    <columns>NAME</columns>
    <columns>Related_Object__c</columns>
    <columns>Related_Record_ID__c</columns>
    <columns>Description__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Related_Object__c</field>
        <operation>equals</operation>
        <value>Lead</value>
    </filters>
    <label>Lead Batch Error</label>
</ListView>